2025-09-11T00:37:32Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17630480354 # 1215
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-11
* notice: last 14d: unq all: 10 12
* notice: prev accum: outdated-unq outdated-all / unq all: 1036 3076 / 1046 3087
* notice: next accum: outdated-unq outdated-all / unq all: 1037 3077 / 1047 3089
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2025-08-27] / [2025-09-10]

2025-09-06T00:35:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17507509293 # 1205
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-06
* notice: last 14d: unq all: 10 11
* notice: prev accum: outdated-unq outdated-all / unq all: 1035 3075 / 1045 3085
* notice: next accum: outdated-unq outdated-all / unq all: 1036 3076 / 1046 3087
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2025-08-22] / [2025-09-05]

2025-09-04T12:00:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17463110072 # 1202
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-04
* notice: last 14d: unq all: 10 10
* notice: prev accum: outdated-unq outdated-all / unq all: 1034 3060 / 1045 3085
* notice: next accum: outdated-unq outdated-all / unq all: 1035 3075 / 1045 3085
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-21] / []

2025-09-04T00:36:25Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17449750867 # 1201