@@ -1,6 +1,6 @@
 {
-  "count": 12,
-  "uniques": 10,
+  "count": 17,
+  "uniques": 12,
   "views": [
     {
       "timestamp": "2025-08-29T00:00:00Z",
@@ -31,6 +31,11 @@
       "timestamp": "2025-09-10T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-09-11T00:00:00Z",
+      "count": 5,
+      "uniques": 2
     }
   ]
 }
